# realtime_monitor

./: .gitignore  README.md  chat-cli.spec  chat_history.json  chatcli.spec  main.py  pyproject.toml
src/chatcli/: client.py  config.py  storage.py  ui.py
